# jan214.github.io

./: README.md  dictionary.css  index.css  index.html  main.js  water.wasm
AboutMe/: AboutMe.html  aboutme.css
Contact/: Contact.html  contact.css
Draw/: Draw.html  draw.css  main.js
Game/: Game.html  game.css
Game2/: index.html
Game2/TemplateData/: style.css
MaterialTest/: CMakeLists.txt  CMakeSettings.json  MaterialTest.pro  collision.cpp  collision.h  glad.c  main.cpp  mymath.cpp  mymath.h  object.cpp  object.h  physicssystem.cpp  physicssystem.h  resources.cpp  resources.h  shader.cpp  shader.h  skeletalanimation.cpp  skeletalanimation.h  test.html  test.js  test.wasm  testCube.fbx
MaterialTest/include/glad/: glad.h
Modelling/: 3DModelling.html  3dmodelling.css  OBJLoader.js  test.js
ParallaxMapping/: ParallaxMapping.html  main.js  parallaxmapping.css  plane.js
TestQtProject/: TestQtProject.html  TestQtProject.js  object_script.TestQtProject.js
Water/: water.js  water.wasm
water/: index.data  index.js  index.wasm  water.data  water.html  water.js  water.wasm
